# MerC

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Spec.md
Examples/: Borrow.mer  Hello_World.mer  Namespace.mer
Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.hpp
Parser/: AST.cpp  AST.hpp  CMakeLists.txt
Tests/Bad/: 003.mer
Tests/Good/: 001.mer
