CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)
PROJECT(mercc)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

LIST(APPEND SOURCES Main.cpp)

INCLUDE_DIRECTORIES(.)

ADD_SUBDIRECTORY(Lexer)
ADD_SUBDIRECTORY(Parser)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
	${SOURCES} 
	${HEADERS})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} Lexer)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} Parser)